english and mexican history cards added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,28 +1,29 @@
-<div class="container">
-  <div class="row justify content-center col-6 pm">
-    <div class="card-trip">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Mexican History from 1519-1940</h2>
-          <p>Resources and what I've produced</p>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card-trip">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>Mexican History from 1519-1940</h2>
+            <p>Resources and what I've produced</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
-<div class="container">
-  <div class="row col-6">
-    <div class="card-trip">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>English History in North America</h2>
-          <p>Resources and what I've produced</p>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card-trip">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2>English Colonial History in North America</h2>
+            <p>Resources and what I've produced</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
